--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -30,6 +30,18 @@
                         </i> Manage Users </a>
                 </button>
             </div>
+                    <!--da qui modifico-->
+            <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#desserts"
+                (click)="dessertscollapse()">
+                <i class="fas fa-desserts" style="margin-right: 15px"></i>Desserts
+            </button>
+            <div class="collapsebtn" id="desserts" *ngIf="isDessertCollapsed">
+                <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
+                    <a [routerLink]="['/admin-dashboard/desserts']"> <i class="fas fa-edit" style="margin-right: 10px">
+                        </i> Manage Desserts </a>
+                </button>
+            </div>
+            <!--fino qui-->
             <button class="menubtn" (click)="logout()">
                 <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
             </button>
