--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -30,6 +30,18 @@
                         </i> Manage Users </a>
                 </button>
             </div>
+
+            <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#cocktails"
+                (click)="cocktailscollapse()">
+                <i class="fas fa-cocktails" style="margin-right: 15px"></i>Cocktails
+            </button>
+            <div class="collapsebtn" id="users" *ngIf="isCocktailCollapsed">
+                <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
+                    <a [routerLink]="['/admin-dashboard/cocktails']"> <i class="fas fa-edit" style="margin-right: 10px">
+                        </i> Manage Coctails </a>
+                </button>
+            </div>
+
             <button class="menubtn" (click)="logout()">
                 <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
             </button>
